--- a/style.css
+++ b/style.css
@@ -1,13 +1,65 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
 }
 h1{
     font-size: 50px;
 }
-.name-highlight{
+h2{
+    font-size: 40px;
+
+}
+.orange-highlight{
     color: orange;
 }
 .half-width{
-    width: 50%;
+    width: 40%;
     float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+}
+.half-width img{
+    width:100% ;
+}
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 200px;
+}
+.link-button{
+    text-decoration: none;
+    background-color: orange;
+    color: white;
+    font-weight: 700;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+.dream-area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+    
+}
+.blog{
+    box-shadow: 10px 10px 40px gray;
+    height: 60%;
+    background-color: seashell;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 10px solid;
+}
+#baby-web{
+    border-left: 10px goldenrod;
+}
+footer{
+    text-align: center;
+    font-size: 10px;
 }
